--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,9 +21,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="116dp"
                 android:layout_gravity="center_horizontal"
+                android:background="?android:attr/selectableItemBackground"
                 android:paddingTop="30dp"
                 android:paddingBottom="10dp"
-                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/profile_photo"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp" />
@@ -31,10 +31,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="NAME"
                 android:background="?android:attr/selectableItemBackground"
+                android:text="NAME"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
@@ -51,35 +51,11 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="40dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginRight="15dp"
-                        android:src="@drawable/layerlist_update"
-                        app:civ_circle_background_color="@color/fui_bgAnonymous" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="Update"
-                        android:textColor="#000000"
-                        android:textSize="@dimen/material_text_title_h6" />
-                </LinearLayout>
-
-                <LinearLayout
                     android:background="?android:attr/selectableItemBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -99,11 +75,11 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -123,11 +99,11 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -146,25 +122,12 @@
                         android:textSize="@dimen/material_text_title_h6" />
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/rounded_edittext"
-                    android:paddingLeft="15dp"
-                    android:text="Miscellaneous"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="italic" />
-
                 <LinearLayout
                     android:id="@+id/about_button"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
@@ -181,59 +144,14 @@
                         android:layout_gravity="center_vertical"
                         android:text="About Shabd"
                         android:textColor="#000000"
-                        android:textSize="@dimen/material_text_title_h6" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:orientation="horizontal">
-
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="40dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginRight="15dp"
-                        android:src="@drawable/layerlist_rate"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="Rate us"
-                        android:textColor="#000000"
-                        android:textSize="@dimen/material_text_title_h6" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:orientation="horizontal">
-
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="40dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginRight="15dp"
-                        android:src="@drawable/layerlist_share"
-                        app:civ_circle_background_color="@color/design_default_color_primary" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="Share"
-                        android:textColor="#000000"
-                        android:textSize="@dimen/material_text_title_h6" />
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 </FrameLayout>
+
 
 
 
