--- a/app/src/main/res/drawable/layerlist_about.xml
+++ b/app/src/main/res/drawable/layerlist_about.xml
@@ -3,9 +3,9 @@
         <!--  drawable/circle_card_icon.xml  -->
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
-            <solid android:color="#990"/>
+            <solid android:color="@color/cardBackground"/>
             <size android:width="96dp" android:height="96dp"/>
         </shape>
     </item>
-    <item android:drawable="@drawable/about_icon"/>
+    <item android:drawable="@drawable/about_icon" android:height="90dp" android:width="90dp" android:gravity="center"/>
 </layer-list>
