--- a/app/src/main/res/drawable/layerlist_share.xml
+++ b/app/src/main/res/drawable/layerlist_share.xml
@@ -3,11 +3,11 @@
         <!--  drawable/circle_card_icon.xml  -->
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
-            <solid android:color="#913" />
+            <solid android:color="#61045f" />
             <size
                 android:width="96dp"
                 android:height="96dp" />
         </shape>
     </item>
-    <item android:drawable="@drawable/share_icon" />
+    <item android:drawable="@drawable/share_icon" android:height="70dp" android:width="70dp" android:gravity="center" />
 </layer-list>
