--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="lightgreen">#00ff00</color>
     <color name="white">#ffffff</color>
     <color name="Darker_grey">#A9A9A9</color>
+    <color name="black">#000000</color>
+
   
     <color name="meaningBackground">#FFFFFF</color>
     <color name="floatingButton">#CCFF9800</color>
