--- a/app/src/main/res/layout/fragment_meaning.xml
+++ b/app/src/main/res/layout/fragment_meaning.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/meaninglayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,13 +17,16 @@
         android:textStyle="bold"
         android:visibility="invisible" />
 
-    <ProgressBar
+    <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AVLoadingIndicatorView"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
         android:layout_centerInParent="true"
         android:layout_marginTop="224dp"
         android:layout_marginRight="125dp"
-        android:visibility="invisible" />
+        android:visibility="visible"
+        app:indicatorColor="@color/colorPrimary"
+        app:indicatorName="BallClipRotateMultipleIndicator" />
 
 </RelativeLayout>
