--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -43,14 +43,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_margin="12dp"
+                    android:layout_margin="8dp"
                     android:padding="4dp"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:translationZ="2dp"
+                    android:text="@string/play_draw" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_gravity="bottom"
+                    android:background="@android:color/black"
+                    android:alpha="0.5"
                     android:translationZ="1dp"
-                    tools:text="Category 1" />
+                    android:layout_height="40dp" />
 
                 <ImageView
                     android:id="@+id/learn_image_1"
                     android:layout_width="match_parent"
+                    android:src="@drawable/play_draw"
+                    android:scaleType="fitXY"
                     android:layout_height="match_parent" />
 
             </android.support.v7.widget.CardView>
