--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -45,25 +45,25 @@
                     android:layout_gravity="bottom"
                     android:layout_margin="8dp"
                     android:padding="4dp"
+                    android:text="@string/play_draw"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:translationZ="2dp"
-                    android:text="@string/play_draw" />
+                    android:translationZ="2dp" />
 
                 <ImageView
                     android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:layout_gravity="bottom"
-                    android:background="@android:color/black"
                     android:alpha="0.5"
-                    android:translationZ="1dp"
-                    android:layout_height="40dp" />
+                    android:background="@android:color/black"
+                    android:translationZ="1dp" />
 
                 <ImageView
                     android:id="@+id/learn_image_1"
                     android:layout_width="match_parent"
-                    android:src="@drawable/play_draw"
+                    android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:layout_height="match_parent" />
+                    android:src="@drawable/play_draw" />
 
             </android.support.v7.widget.CardView>
 
@@ -82,10 +82,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_margin="12dp"
+                    android:layout_margin="8dp"
                     android:padding="4dp"
-                    android:translationZ="1dp"
-                    tools:text="Category 2" />
+                    android:text="@string/play_play_text"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:translationZ="2dp" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom"
+                    android:alpha="0.5"
+                    android:background="@android:color/black"
+                    android:translationZ="1dp" />
 
                 <ImageView
                     android:id="@+id/learn_image_2"
@@ -112,7 +122,7 @@
                     android:layout_margin="12dp"
                     android:padding="4dp"
                     android:translationZ="1dp"
-                    tools:text="Category 4" />
+                    tools:text="Category 3" />
 
                 <ImageView
                     android:id="@+id/learn_image_3"
