--- a/app/src/main/res/drawable/ripple.xml
+++ b/app/src/main/res/drawable/ripple.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/Darker_grey">
+    android:color="@android:color/darker_gray">
     <item android:id="@android:id/mask">
         <shape android:shape="oval">
             <solid android:color="?android:colorPrimary"/>
