--- a/app/src/main/res/layout/activity_language_setting.xml
+++ b/app/src/main/res/layout/activity_language_setting.xml
@@ -40,7 +40,7 @@
         android:fontFamily="sans-serif"
         android:padding="4dp"
         android:text="General"
-        android:textColor="@color/Darker_grey"
+        android:textColor="@android:color/darker_gray"
         android:textSize="22sp" />
 
     <LinearLayout
