--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,14 +4,13 @@
     <color name="colorPrimaryDark">#61045f</color>
     <color name="colorAccent">#216680</color>
     <color name="cardBackground">#1330CE</color>
-    <color name="lightgreen">#00ff00</color>
     <color name="white">#ffffff</color>
-    <color name="Darker_grey">#A9A9A9</color>
-  
+
     <color name="meaningBackground">#FFFFFF</color>
     <color name="floatingButton">#ab47bc</color>
     <color name="searchBackground">#FF9800</color>
 
     <color name="transparent">@android:color/transparent</color>
+    <color name="popup_background">#DD1F2833</color>
 
 </resources>
