mirgated to latest gradle version

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -12,10 +12,10 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:id="@+id/splash_icon"
-        android:src="@drawable/ic_learn_black_24dp"
-        android:tint="@android:color/white"
+        android:src="@drawable/shabd"
         android:scaleX="0"
         android:scaleY="0"
+        android:translationZ="1dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
