--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Setting.SettingFragment">
+    tools:context=".Setting.SettingFragment"
+    android:id="@+id/settings_fragmenr_layout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -202,6 +203,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/rate_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
@@ -226,6 +228,7 @@
                 </android.support.v7.widget.CardView>
 
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
