Add tasks in the play activity with proper activity call

--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -119,11 +119,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_margin="12dp"
+                    android:layout_margin="8dp"
                     android:padding="4dp"
-                    android:translationZ="1dp"
-                    tools:text="Category 3" />
-
+                    android:text="@string/story_text"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:translationZ="2dp" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom"
+                    android:alpha="0.5"
+                    android:background="@android:color/black"
+                    android:translationZ="1dp" />
                 <ImageView
                     android:id="@+id/learn_image_3"
                     android:layout_width="match_parent"
