--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="transparent">@android:color/transparent</color>
     <color name="popup_background">#DD1F2833</color>
 
+    <color name="green">#0EF70E</color>
+    <color name="red">#FF0000</color>
+    <color name="grey">#D3D3D3</color>
 </resources>
