--- a/app/src/main/res/layout/youtubeapi.xml
+++ b/app/src/main/res/layout/youtubeapi.xml
@@ -34,6 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:scaleType="matrix"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
